# 7TVEmotesToDiscord

./: .gitignore  README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gifsicle/: .gitignore  config.h  wrapper.c
app/src/main/cpp/gifsicle/include/lcdf/: inttypes.h
app/src/main/cpp/gifsicle/include/lcdfgif/: gif.h
app/src/main/cpp/gifsicle/source/: giffunc.c  gifsicle.c  quantize.c  support.c  xform.c
app/src/main/cpp/gifsicle/src/: gifsicle.c  merge.c  optimize.c  quantize.c  support.c  xform.c
app/src/main/java/com/diskree/emotes2discord/: MainActivity.kt
app/src/main/res/drawable/: bg_cancel_button.xml  bg_clipboard_button.xml  bg_input.xml  bg_ripple.xml  ic_7tv.xml  ic_arrow_right.xml  ic_close.xml  ic_ds.xml  ic_error.xml  ic_optimize.xml  ic_save.xml  ic_search.xml  url_input_bar_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
